fix: fixed database compatibility
